--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -11343,15 +11343,25 @@ hr.divider-light {
   background-color: #fff;
   transition: background-color 0.2s ease;
 }
+#mainNav2 {
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+  background-color: #03b4a1  ;
+  transition: background-color 0.2s ease;
+}
 #mainNav .navbar-brand {
   font-family: "Merriweather Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  font-weight: 700;
+  font-weight: 600;
   color: #fff;
 }
-#mainNav .navbar-nav .nav-item .nav-link {
+#mainNav2 .navbar-brand {
+  font-family: "Merriweather Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-weight: 600;
+  color: #101214;
+}
+#mainNav #mainNav2 .navbar-nav .nav-item .nav-link {
   color: #6c757d;
   font-family: "Merriweather Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  font-weight: 700;
+  font-weight: 600;
   font-size: 0.9rem;
   padding: 0.75rem 0;
 }
@@ -11367,7 +11377,7 @@ hr.divider-light {
     background-color: transparent;
   }
   #mainNav .navbar-brand {
-    color: rgba(255, 255, 255, 0.7);
+    color: rgba(0,181,163, 0.7);
   }
   #mainNav .navbar-brand:hover {
     color: #fff;
